# PMbrowser

./: .gitignore  CMakeLists.txt  DatFile.cpp  DatFile.h  DisplayTrace.cpp  DisplayTrace.h  DlgChoosePathAndPrefix.cpp  DlgChoosePathAndPrefix.h  DlgChoosePathAndPrefix.ui  DlgGraphSettings.cpp  DlgGraphSettings.h  DlgGraphSettings.ui  DlgSelectParameters.cpp  DlgSelectParameters.h  DlgTreeFilter.cpp  DlgTreeFilter.h  DlgTreeFilter.ui  Igor_IBW.h  PMparameters.cpp  PMparameters.h  QtPMbrowser.aps  QtPMbrowser.pri  QtPMbrowser.pro  QtPMbrowser.rc  QtPMbrowser.sln  QtPMbrowser.vcxproj  QtPMbrowser.vcxproj.filters  QtPMbrowser_debug.pro  README.md  VorlageCopyright.txt  exportIBW.cpp  exportIBW.h  helpers.cpp  helpers.h  hkTree.cpp  hkTree.h  igor_ipf.h  machineinfo.cpp  machineinfo.h  main.cpp  (+11 more)
.github/workflows/: cmake.yml  codeql.yml
PMbrowserSetup/: PMbrowserSetup.vdproj
QtPMbrowser/: CMakeLists.txt  Config.h.in  DatFile.cpp  DatFile.h  DisplayTrace.cpp  DisplayTrace.h  DlgChoosePathAndPrefix.cpp  DlgChoosePathAndPrefix.h  DlgChoosePathAndPrefix.ui  DlgExportMetadata.cpp  DlgExportMetadata.h  DlgExportMetadata.ui  DlgGraphSettings.cpp  DlgGraphSettings.h  DlgGraphSettings.ui  DlgPreferences.cpp  DlgPreferences.h  DlgPreferences.ui  DlgSelectParameters.cpp  DlgSelectParameters.h  DlgSelectParameters.ui  DlgTreeFilter.cpp  DlgTreeFilter.h  DlgTreeFilter.ui  PMbrowser.icns  PMparameters.cpp  PMparameters.h  PMparametersModel.cpp  PMparametersModel.h  QtPMbrowser.pri  QtPMbrowser.rc.in  QtPMbrowser.vcxproj  TxtTableModel.cpp  TxtTableModel.h  exportIBW.cpp  helpers.h  hkTree.cpp  hkTree.h  igor_ipf.h  main.cpp  (+9 more)
QtPMbrowser/linux_deploy/: de.halaszovich.PMbrowser.appdata.xml  de.halaszovich.PMbrowser.appdata.xml.in  de.halaszovich.PMbrowser.yml  de.halaszovich.pmbrowser.desktop.in  halaszovich-pmbrowser.desktop
cmake/: FindSphinx.cmake
cmdline_tools/: CMakeLists.txt  export_all_npy.cpp  metadataextractor.cpp  stimtree_explorer.cpp
demo/: README.md  calc_mean.py  calc_means.py  multiplot_traces.py  plot_trace.py  plot_traces.py
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  conf.py.in  index.rst  introduction.rst
doc/usage/: Screenshot_tour_dlg_params.xcf  Screenshot_tour_step1.xcf  displayarea.rst  igor_export_infos.rst  installation.rst  menues.rst  new_user_tour.rst  tree-view.rst
hekatoolslib/: CMakeLists.txt  DatFile.cpp  DatFile.h  Igor_IBW.h  PMparameters.cpp  PMparameters.h  StimTree.cpp  StimTree.h  exportIBW.cpp  exportIBW.h  exportNPY.cpp  exportNPY.h  helpers.cpp  helpers.h  hkTree.cpp  hkTree.h  hkTreeView.cpp  hkTreeView.h  igor_ipf.h  machineinfo.h  time_handling.cpp  time_handling.h
